konzultace26_2/DP_vrstvy/GpMessages/527033193370700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: pondělí 3. března 2025 14:54:35</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    Podpora resilience - nízká urgence
            ^^^^^^^^^^
﻿SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at pondělí 3. března 2025 14:54:35 (Elapsed Time: 0,17 seconds)</msg></messages>